--- a/shop-accounts.html
+++ b/shop-accounts.html
@@ -77,20 +77,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-warning">للبيع</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/accounts/1.png" alt="">
-                    <!-- Offer Countdown Timer: Please use event time this format: YYYY/MM/DD hh:mm:ss -->
-                    <ul class="offer-countdown-timer d-flex align-items-center shadow-sm" data-countdown="2023/12/31 23:59:59">
-                      <li><span class="days">0</span>d</li>
-                      <li><span class="hours">0</span>h</li>
-                      <li><span class="minutes">0</span>m</li>
-                      <li><span class="seconds">0</span>s</li>
-                    </ul></a>
-                  <!-- Product Title --><a class="product-title" href="#">حسابات نتفليكس</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#netflix" href="#"><img class="mb-2" src="img/product/accounts/1.png" alt="">
+                  <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#netflix" href="#">حسابات نتفليكس</a>
                   <!-- Product Price -->
                   <p class="sale-price">$13<span>$42</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#netflix" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -106,7 +99,7 @@
                   <p class="sale-price">$74<span>$99</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -122,7 +115,7 @@
                   <p class="sale-price">$99<span>$113</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -133,19 +126,13 @@
                   <!-- Badge--><span class="badge rounded-pill badge-danger">-18%</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart">                       </i></a>
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/accounts/4.png" alt="">
-                    <!-- Offer Countdown Timer: Please use event time this format: YYYY/MM/DD hh:mm:ss -->
-                    <ul class="offer-countdown-timer d-flex align-items-center shadow-sm" data-countdown="2022/12/23 00:21:29">
-                      <li><span class="days">0</span>d</li>
-                      <li><span class="hours">0</span>h</li>
-                      <li><span class="minutes">0</span>m</li>
-                      <li><span class="seconds">0</span>s</li>
-                    </ul></a>
+                    
                   <!-- Product Title --><a class="product-title" href="#">حسابات يوتيوب برايم</a>
                   <!-- Product Price -->
                   <p class="sale-price">$87<span>$92</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -161,7 +148,7 @@
                   <p class="sale-price">$21<span>$25</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -177,7 +164,7 @@
                   <p class="sale-price">$21<span>$25</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -193,7 +180,7 @@
                   <p class="sale-price">$21<span>$25</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -209,7 +196,7 @@
                   <p class="sale-price">$21<span>$25</span></p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -217,6 +204,89 @@
         </div>
       </div>
     </div>
+	
+	<!-- Modal Netflix -->
+<div class="modal fade" id="netflix" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div dir="rtl" class="modal-content">
+      <div class="modal-header">
+        <h1 class="text-black mb-0 fs-5" id="staticBackdropLabel">حسابات نتفليكس</h1>
+      </div>
+      <div class="modal-body">
+		<p><i class="fa-solid fa-dice"></i> <b>منصة :</b> نتفليكس</p>
+		
+		<p><i class="fa-solid fa-user-ninja"></i> <b>نوع : </b> حساب</p>
+		
+		
+		<p><b>Netflix</b> هي خدمة بثّ تعتمد على الاشتراك وتتيح للأعضاء مشاهدة العروض التلفزيونية والأفلام على جهاز متصل بالإنترنت.   
+
+وفقًا لخطتك، يمكنك أيضًا تنزيل العروض التلفزيونية والأفلام على الأجهزة التي تعمل بنظام التشغيل iOS أو Android أو Windows 10 والاستمتاع بالمشاهدة دون اتصال بالإنترنت</p></br>
+		<img src="https://help.nflxext.com/0af6ce3e-b27a-4722-a5f0-e32af4df3045_what_is_netflix_5_en.png" alt="Girl in a jacket" width="500" height="600"/></br></br>
+          <h4 class="mb-0 text-black">التسعير لدينا</h4></br>
+		<!-- On tables -->
+<table class="table table-striped">
+  <thead>
+    <tr class="table-danger">
+      <th class="table-danger" scope="col">#</th>
+      <th class="table-danger" scope="col">المنتج</th>
+	  <th class="table-danger" scope="col">المدة</th>
+      <th class="table-danger" scope="col">النوع</th>
+      <th class="table-danger" scope="col">تمن الشراء</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="table-danger">
+      <th class="table-primary" scope="row">1</th>
+      <td class="table-primary">نتفليكس</td>
+	  <td class="table-primary">شهر</td>
+      <td class="table-primary">4K ULTRA HD</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  90 د.م </a></td>
+    </tr>
+    <tr class="table-danger">
+      <th class="table-primary" scope="row">2</th>
+      <td class="table-primary">نتفليكس</td>
+      <td class="table-primary">شهر</td>
+      <td class="table-primary">4K ULTRA HD</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  150 د.م </a></td>
+    </tr>
+    <tr class="table-danger">
+      <th class="table-primary" scope="row">3</th>
+      <td class="table-primary">نتفليكس</td>
+	  <td class="table-primary">شهر</td>
+      <td class="table-primary">4K ULTRA HD</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  250 د.م </a></td>
+    </tr>
+	<tr class="table-danger">
+      <th class="table-primary" scope="row">4</th>
+      <td class="table-primary">نتفليكس</td>
+	  <td class="table-primary">شهر</td>
+      <td class="table-primary">4K ULTRA HD</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  350 د.م </a></td>
+    </tr>
+	<tr class="table-danger">
+      <th class="table-primary" scope="row">5</th>
+      <td class="table-primary">نتفليكس</td>
+	  <td class="table-primary">شهر</td>
+      <td class="table-primary">4K ULTRA HD</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  630 د.م </a></td>
+    </tr>
+	<tr class="table-danger">
+      <th class="table-primary" scope="row">6</th>
+      <td class="table-primary">نتفليكس</td>
+	  <td class="table-primary">شهر</td>
+      <td class="table-primary">4K ULTRA HD</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  1500 د.م </a></td>
+    </tr>
+  </tbody>
+</table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+      </div>
+    </div>
+  </div>
+</div>
 	
     <!-- Internet Connection Status-->
     <div class="internet-connection-status" id="internetStatus"></div>
