--- a/shop-accounts.html
+++ b/shop-accounts.html
@@ -80,7 +80,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#netflix" href="#"><img class="mb-2" src="img/product/accounts/1.png" alt="">
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#netflix" href="#">حسابات نتفليكس</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$13<span>$42</span></p>
+                  <p class="sale-price">ابتداء من 90 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#netflix" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
