--- a/shop-accounts.html
+++ b/shop-accounts.html
@@ -80,7 +80,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#netflix" href="#"><img class="mb-2" src="img/product/accounts/1.png" alt="">
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#netflix" href="#">حسابات نتفليكس</a>
                   <!-- Product Price -->
-                  <p class="sale-price">ابتداء من 90 د.م</p>
+                  <p class="sale-price">ابتداء من 90 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#netflix" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -96,7 +96,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#amazon" href="#"><img class="mb-2" src="img/product/accounts/2.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#amazon" href="#">حسابات أمازون برايم</a>
                   <!-- Product Price -->
-                  <p class="sale-price">ابتدا من 250 د.م</p>
+                  <p class="sale-price">ابتدا من 250 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#amazon" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -112,7 +112,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/accounts/3.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="#">حسابات اتسي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$99<span>$113</span></p>
+                  <p class="sale-price">$99<span>$113</span></p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -129,7 +129,7 @@
                     
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#yt" href="#">حسابات يوتيوب برايم</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$87<span>$92</span></p>
+                  <p class="sale-price">$87<span>$92</span></p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#yt" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -142,13 +142,13 @@
                 <div class="card-body">
                   <!-- Badge--><span class="badge rounded-pill badge-danger">-11%</span>
                   <!-- Wishlist Button--><a class="wishlist-btn" href="#"><i class="fa-solid fa-heart"></i></a>
-                  <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/accounts/5.png" alt=""></a>
-                  <!-- Product Title --><a class="product-title" href="#">حسابات مدير إعلانات فيسبوك</a>
+                  <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#fb" href="#"><img class="mb-2" src="img/product/accounts/5.png" alt=""></a>
+                  <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#fb" href="#">حسابات مدير إعلانات فيسبوك</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$21<span>$25</span></p>
+                  <p class="sale-price">$21<span>$25</span></p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
-                  <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
+                  <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#fb" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
                 </div>
               </div>
             </div>
@@ -161,7 +161,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/accounts/6.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="#">حسابات تيك توك</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$21<span>$25</span></p>
+                  <p class="sale-price">$21<span>$25</span></p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -177,7 +177,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="#"><img class="mb-2" src="img/product/accounts/7.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="#">حسابات ايباي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$21<span>$25</span></p>
+                  <p class="sale-price">$21<span>$25</span></p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -193,7 +193,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#gpt" href="#"><img class="mb-2" src="img/product/accounts/8.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#gpt" href="#">حسابات شات جبتي</a>
                   <!-- Product Price -->
-                  <p class="sale-price">ابتدا من 180 د.م</p>
+                  <p class="sale-price">ابتدا من 180 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#gpt" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -325,7 +325,7 @@
 		
 		<p><i class="fa-solid fa-user-ninja"></i> <b>نوع : </b> حساب</p>
 		
-		<p><i class="fa-solid fa-user-ninja"></i> <b>تحقق من بلدك : </b> <a data-bs-toggle="modal" data-bs-target="#ytnotif" href="#">المواقع المتاحة للعضويات المميزة</a></p>
+		<p><i class="fa-solid fa-user-ninja"></i> <b>تحقق من بلدك : </b> <a class="text-red" data-bs-toggle="modal" data-bs-target="#ytnotif" href="#">المواقع المتاحة للعضويات المميزة</a></p>
 		
 		
 		<p><b>YouTube Premium </b> هو أحد خِدْمَات اليوتيوب المُميّزة التي تتيح للمستخدمين مجموعة من الفوائد، تتمثل في تجربة الاستخدام الخالية من الإعلانات، وتقاسم أرباح الاشتراكات بين اليوتيوب وأصحاب القنوات. ولحسن الحظ أن مشتركي يوتيوب بريميوم في ازدياد، وهي فرصة يجب أن تستغلها إذا كنت صانع محتوى أو صاحب قناة.</p></br>
@@ -498,6 +498,79 @@ Kuwait,	Vietnam,</td>
       <th class="table-primary" scope="row">2</th>
       <td class="table-primary">chatgpt</td>
       <td class="table-primary">حساب خاص</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  230 د.م </a></td>
+    </tr>
+  </tbody>
+</table>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Modal Facebook Accounts -->
+<div class="modal fade" id="fb" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+    <div dir="rtl" class="modal-content">
+      <div class="modal-header">
+        <h1 class="text-black mb-0 fs-5" id="staticBackdropLabel">حسابات الفيسبوك</h1>
+      </div>
+      <div class="modal-body">
+		<p><i class="fa-solid fa-dice"></i> <b>منصة :</b> الفيسبوك</p>
+		
+		<p><i class="fa-solid fa-user-ninja"></i> <b>نوع : </b> حساب</p>
+		
+		
+		<p><b>ملاحظة مهمة : </b>قم بتسجيل الدخول دائمًا باستخدام الرابط https://m.facebook.com/login لتجنب نقطة التفتيش. ثم قم بالتبديل إلى https://facebook.com العادي. بعد تسجيل الدخول، لا تقم بتغيير أي معلومات الحساب. ولا تسجل الخروج.</p></br>
+		<p>
+● يجب الحد من تغيير معلومات الحساب لتجنب قفل الحساب بسبب الشك، وجميع المعلومات سرية تمامًا.</br>
+
+● لا تستخدم الحساب لإنشاء BM، لا تغير البريد الإلكتروني، أضف رقم الهاتف، الرمز 2fa. لا تستخدم متصفح هاتفك لتسجيل الدخول إلى الحساب، فقد يُطلب منك التحقق من هويتك. نحن ننكر الضمان!. إذا كنت تريد استخدام BM، يمكنك شراء BM أدناه ثم الارتباط بملفك الشخصي.</br>
+
+● إذا لم تتمكن من تسجيل الدخول بسبب كلمة مرور خاطئة، فحاول تسجيل الدخول باستخدام عنوان IP آخر أو اتصل بالمسؤول للحصول على الدعم. لا تقم مطلقًا بإعادة تعيين كلمة المرور بشكل تعسفي.</br>
+
+● الرجاء إضافة نسخة احتياطية للمسؤول إلى مدير الأعمال، الصفحات. (عليك أن تفعل ذلك لأننا لن ندعم تقديم الدعوات مرة أخرى). الرجاء إزالة المسؤولين المتبقين بعد 7 أيام.</br>
+
+● ليكون الحساب في أفضل حالة عمل، بعد تسجيل الدخول الناجح، يرجى الانتظار من 1 إلى 3 ساعات. في هذه الأثناء لا تغير المعلومات ولا تربط أي منها خلال هذه الفترة.</br>
+
+● لا تنشر الكثير من الحملات والمجموعات الإعلانية والإعلانات. الحد من التحرير بعد نشره. لا تستخدم بطاقات وطرق الدفع المحظورة أو المشبوهة، المستخدمة للإضافة إلى الحساب الإعلاني عدة مرات.</br>
+
+● لا يمكن دعم أخطاء تسجيل الدخول مثل التحقق من الهوية، والموافقة على تسجيل الدخول من الجهاز. لا توجد وسيلة أخرى. لذا استخدم حسابك بعناية.</p></br>
+
+		<img src="https://helios-i.mashable.com/imagery/articles/06N5MQz1TGBjt3CHVAZ3Dia/hero-image.fill.size_1248x702.v1631123125.png" alt="Girl in a jacket" width="500" height="600"/></br></br>
+          <h4 class="mb-0 text-black">التسعير لدينا</h4></br>
+		<!-- On tables -->
+<table class="table table-striped">
+  <thead>
+    <tr class="table-danger">
+      <th class="table-danger" scope="col">#</th>
+      <th class="table-danger" scope="col">المنتج</th>
+      <th class="table-danger" scope="col">متاح</th>
+	  <th class="table-danger" scope="col">الوصف</th>
+      <th class="table-danger" scope="col">تمن الشراء</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr class="table-danger">
+      <th class="table-primary" scope="row">1</th>
+      <td class="table-primary">مدير اعمال</td>
+      <td class="table-primary">50</td>
+	  <td class="table-primary">مدير أعمال لم يتم التحقق منه - BM1 غير محدود -7 دولار أمريكي</br>المنطقة الزمنية -7، العملة USD (غير قادر على التغيير)
+يمكن إنشاء المزيد من الحسابات الإعلانية ولكن بحد إنفاق يتراوح بين 25 و50 دولارًا فقط.</td>
+      <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  2040 د.م </a></td>
+    </tr>
+    <tr class="table-danger">
+      <th class="table-primary" scope="row">2</th>
+      <td class="table-primary">مدير اعمال</td>
+	  <td class="table-primary">40</td>
+      <td class="table-primary">مدير أعمال لم يتم التحقق منه - BM350 بحد 50 دولارًا</br>
+	  حد الإنفاق 50 دولارًا في اليوم</br>
+تم إنشاء حساب إعلاني أو لم يتم إنشاؤه، وتم التحقق من البريد الإلكتروني للمسؤول.
+	  
+	  </td>
       <td class="table-primary"><a class="mb-0 text-black" href="https://wa.me/0718113533" type="button" target="_blank"><i class="fa-solid fa-basket-shopping"></i>  230 د.م </a></td>
     </tr>
   </tbody>
