--- a/settings.html
+++ b/settings.html
@@ -100,7 +100,7 @@
                 <div class="title"><i class="fa-solid fa-moon"></i><span>تغير الشكل</span></div>
                 <div class="data-content">
                   <div class="toggle-button-cover">
-                    <div class="button r">
+                    <div class="button r" for="darkSwitch">
                       <input class="checkbox" id="darkSwitch" type="checkbox">
                       <div class="knobs"></div>
                       <div class="layer"></div>
