--- a/shop-accounts.html
+++ b/shop-accounts.html
@@ -129,7 +129,7 @@
                     
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#yt" href="#">حسابات يوتيوب برايم</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$87<span>$92</span></p></br>
+                  <p class="sale-price">240 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#yt" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
@@ -145,7 +145,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" data-bs-toggle="modal" data-bs-target="#fb" href="#"><img class="mb-2" src="img/product/accounts/5.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" data-bs-toggle="modal" data-bs-target="#fb" href="#">حسابات مدير إعلانات فيسبوك</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$21<span>$25</span></p></br>
+                  <p class="sale-price">230 د.م</p></br>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#fb" href="#"><i class="fa-solid fa-hand-holding-heart"></i></a>
