--- a/games-list.html
+++ b/games-list.html
@@ -62,7 +62,7 @@
       <div class="py-3">
         <div class="container">
           <div class="section-heading d-flex align-items-center justify-content-between rtl-flex-d-row-r">
-            <h6>عناصر قائمة الألعاب (2)</h6>
+            <h6>عناصر قائمة الألعاب (1)</h6>
           </div>
           <div class="row g-2">
             <!-- Weekly Product Card -->
@@ -76,7 +76,7 @@
                     <!-- Delete  --><a class="delete-btn" href="shop-game-device.html"><i class="fa-solid fa-bolt"></i></a>
                     <!-- Product Title --><a class="product-title d-block" href="shop-game-device.html">بواسطة الجهاز</a>
                     <!-- Price -->
-                    <p class="sale-price"><i class="fa-solid fa-dollar-sign"></i>$99<span>$159</span></p>
+                    <p class="sale-price"><i class="fa-solid fa-dollar-sign"></i>179 د.م</p>
                     <!-- Rating -->
                     <div class="product-rating"><i class="fa-solid fa-star"></i>4.82 <span class="ms-1">(125 مراجعة)</span></div>
                   </div>
