--- a/shop-accounts.html
+++ b/shop-accounts.html
@@ -254,7 +254,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -307,7 +307,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -362,7 +362,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+       <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -505,7 +505,7 @@ Kuwait,	Vietnam,</td>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+       <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -578,7 +578,7 @@ Kuwait,	Vietnam,</td>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
