--- a/shop-game-device.html
+++ b/shop-game-device.html
@@ -81,7 +81,7 @@
              
                   <!-- Product Title --><a class="product-title" href="shop-game-pc.html">بواسطة جهاز الكمبيوتر</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$13<span>$42</span></p>
+                  <p class="sale-price">1199 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
@@ -97,7 +97,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="shop-game-xbox.html"><img class="mb-2" src="img/product/games/game.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="shop-game-xbox.html">بواسطة اكس بوكس</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$74<span>$99</span></p>
+                  <p class="sale-price">179 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
@@ -113,7 +113,7 @@
                   <!-- Thumbnail --><a class="product-thumbnail d-block" href="shop-game-psn.html"><img class="mb-2" src="img/product/games/ps4.png" alt=""></a>
                   <!-- Product Title --><a class="product-title" href="shop-game-psn.html">بواسطة بلاي ستيشن</a>
                   <!-- Product Price -->
-                  <p class="sale-price">$99<span>$113</span></p>
+                  <p class="sale-price">389 د.م</p>
                   <!-- Rating -->
                   <div class="product-rating"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></div>
                   <!-- Add to Cart --><a class="btn btn-success btn-sm" href="#"><i class="fa-solid fa-plus"></i></a>
