--- a/shop-game-pc.html
+++ b/shop-game-pc.html
@@ -385,7 +385,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+       <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -423,7 +423,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -458,7 +458,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -495,7 +495,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -531,7 +531,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -585,7 +585,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -626,7 +626,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -666,7 +666,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -711,7 +711,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -749,7 +749,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -785,7 +785,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+       <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
