--- a/shop-game-psn.html
+++ b/shop-game-psn.html
@@ -315,7 +315,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -353,7 +353,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -389,7 +389,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -426,7 +426,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -460,7 +460,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -536,7 +536,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -565,7 +565,7 @@ GTA 1,000,000 دولار مكافأة نقدية</p></br>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
