--- a/shop-gift-card.html
+++ b/shop-gift-card.html
@@ -242,7 +242,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">أغلق</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -324,7 +324,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
@@ -394,7 +394,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-success">تواصل معنا <i class="fa-brands fa-whatsapp"></i></button>
+        <a href="checkout-payment - Digital.html" type="button" class="btn btn-success">اشتري الان <i class="fa-solid fa-piggy-bank"></i></a>
       </div>
     </div>
   </div>
